grammar.js
    source_file: ($) => seq(repeat($.import_statement), repeat($._statement)),

    // ---------------------------------------------------------------
    // Imports
    //   USE functions: [XNOR, AddressMatch]
    //   USE sculknet_spec/tff: [TFF: FastTFF]
    //   USE shift_register: *
    // ---------------------------------------------------------------
    import_statement: ($) =>
      seq(
        "USE",
        field("module", $.module_path),
        ":",
        choice($.import_list, alias("*", $.import_all)),
      ),

    module_path: ($) => seq($.identifier, repeat(seq("/", $.identifier))),

    import_list: ($) =>
      seq("[", $.import_item, repeat(seq(",", $.import_item)), "]"),

    import_item: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("alias", $.identifier))),
      ),

    // ---------------------------------------------------------------
    // Statements
    // ---------------------------------------------------------------
    _statement: ($) =>
      choice(
        $.function_declaration,
        $.state_declaration,
        $.type_declaration,
        $.input_parameter,
        $.output_parameter,
        $.emission_parameter,
        $.timing_parameter,
        $.flow,
        $.pattern_match,
        $.event_block,
        $.sequence_block,
        $.each_block,
        $.change_block,
        $.hear_block,
        $.after_block,
        $.instance_declaration,
        $.setting_declaration,
        $.inventory_declaration,
        $.control_statement,
      ),

    _block_statement: ($) =>
      choice(
        $.function_declaration,
        $.state_declaration,
        $.flow,
        $.pattern_match,
        $.event_block,
        $.sequence_block,
        $.each_block,
        $.change_block,
        $.hear_block,
        $.after_block,
        $.where_clause,
        $.instance_declaration,
        $.setting_declaration,
        $.control_statement,
      ),

    time: (_) => token(seq(/\d+/, choice("gt", "rt"))),

    // Stack notation:
    // 4s+5i = 4 stacks, 5 items
    // 4s = 4 stacks (should pass on its own)
    // 5i = 5 items (should pass on its own)
    // 5i+4s is not legal
    stack_notation: (_) => token(choice(/\d+s(\+\d+i)?/, /\d+i/)),

    // Ranges
    range: openRange(($) => $.number),
    time_range: openRange(($) => $.time),
    pattern_range: openRange(($) =>
      choice($.number, alias($.tuple_literal, $.number)),
    ),
    stack_range: openRange(($) => $.stack_notation),

    // 3  or  1..4 (inclusive)  or  3..* (pin 3 to the end, for a variadic port)
    pin_range: ($) =>
      seq(
        field("start", $.number),
        optional(
          seq("..", field("end", choice($.number, alias("*", $.open_end)))),
        ),
      ),

    // Inlined, so a declaration and a flow can share `4[` until the star
    // (or its absence) tells them apart.
    _arity: ($) => choice($._count, $.arity_range),

    // The number must touch the star: 2* and *8, never 2 * or * 8.
    function_declaration: ($) =>
      prec.right(
        2,
        seq(
          $._arity,
          "[",
          $.identifier,
          "]",
          $._arity,
          choice("=>", "~>"),
          $.type,
          ":",
        ),
      ),

    // STATE: bit = 0
    state_declaration: ($) =>
      seq(
        $.identifier,
        choice(
          seq(":", $.type, optional(seq("=", $._value))),
          seq("=", $._value),
        ),
      ),

    _value: ($) => choice($.number, $.identifier, $.data_array),

    // -> data_in: byte              next free pins, in declaration order
    // -> 1..8[data_in]: byte        explicitly pins 1 through 8
    // -> 0[shift_enable]: bit       explicitly pin 0
    // Ranges may overlap: two parameters can be different views of the same pins.
    // -> left: strength = 0          optional: if nothing is wired it reads 0
    // Inputs are required unless marked this way.
    input_parameter: ($) =>
      seq(
        "->",
        $._param_name,
        ":",
        $.type,
        optional(seq("=", field("unwired", $.number))),
      ),

    // Hidden so the identifier stays a direct child of the parameter node,
    // which keeps existing queries like (input_parameter (identifier)) valid.
    _param_name: ($) =>
      choice(
        $.identifier,
        seq(field("pins", $.pin_range), "[", $.identifier, "]"),
      ),

    // => result: byte              output port on the next free output pins
    // => 0..3[low]: nibble          output port on explicit pins
    // Mirrors input parameters: same ranges, same overlap rules. A component
    // with no declared outputs has one implicit output, driven by bare `=>`.
    output_parameter: ($) => seq("=>", $._param_name, ":", $.type),

    // ~> out_signal: vibration     an emission: sent into the air, where every
    //                               listener in range hears it; not wired
    control_statement: ($) =>
      choice(
        seq("TOGGLE", $.identifier),
        "NOP",
        seq("WAIT", "(", $.identifier, ")"),
      ),

    //    [ab] -(14)-> heard[css]   carried through the air, 14 blocks
    vibration_link: ($) =>
      seq(
        "~(",
        field("distance", choice($.number, $.arity_range, $.range)),
        ")",
        token.immediate("~>"),
      ),

    // ---------------------------------------------------------------
    // Time
    //   WAIT(clock_signal):      runs its body on a rising edge
    //   SEQ(1rt):                each line fires that long after the last
    // ---------------------------------------------------------------
    event_block: ($) =>
      seq("WAIT", "(", field("trigger", $.identifier), ")", $.block),

    sequence_block: ($) =>
      seq("SEQ", "(", field("delay", $._duration), ")", $.block),

    //   CHANGE(rear):     runs its body on either edge of rear
    change_block: ($) =>
      seq("CHANGE", "(", field("trigger", $.identifier), ")", $.block),

    // HEAR(vib IN heard):  runs once per game tick when a vibration gets
    // through: vib names that vibration inside the body
    after_block: ($) =>
      seq("AFTER", "(", field("delay", $._duration), ")", $.block),

    //   WHERE {phase, pending}?      first statement of a HEAR body: keeps (1)
    //        -{inactive, 0}-> 1 =>   or drops (0) each vibration before one
    //        -{**}-> 0 =>            is chosen
    _duration: ($) => choice($.time, $.computed_time, $.identifier, $.number),

    // floor{vib.dist}gt  - a time worked out while running. The unit must
    // touch the closing brace.
    setting_declaration: ($) =>
      seq(
        "SETTING",
        field("name", $.identifier),
        ":",
        field("allowed", choice($.time_range, $.range, $.setting_options)),
        optional(seq("=", field("default", $._setting_value))),
      ),

    setting_options: ($) =>
      seq("{", $.identifier, repeat(seq(",", $.identifier)), "}"),

    _setting_value: ($) => choice($.time, $.number, $.identifier),

    setting_values: ($) =>
      seq(
        token.immediate("{"),
        $.setting_value,
        repeat(seq(",", $.setting_value)),
        "}",
      ),

    setting_value: ($) =>
      seq(field("name", $.identifier), ":", field("value", $._setting_value)),

    // ---------------------------------------------------------------
    // Inventories, declared inside the component that owns them. A
    // caller can't set them
    //   INVENTORY slots: 5
    //   INVENTORY output: {spit{face}, push{bottom}}
    // ---------------------------------------------------------------
    inventory_declaration: ($) =>
      seq(
        "INVENTORY",
        choice($.inventory_slots, $.inventory_output, $.inventory_capacity),
      ),

    inventory_slots: ($) => seq("slots", ":", field("count", $.number)),

    inventory_output: ($) =>
      seq(
        "output",
        ":",
        "{",
        $.output_method,
        repeat(seq(",", $.output_method)),
        "}",
      ),

    output_method: ($) =>
      seq(
        field("method", alias(choice("spit", "push"), $.method_name)),
        token.immediate("{"),
        field("side", $.side),
        "}",
      ),

    side: (_) =>
      choice("top", "bottom", "left", "right", "face", "rear", "nozzle"),

    // ---------------------------------------------------------------
    // Replication (build time, not run time)
    //   EACH i IN 0..7:        the body is built once per value of i
    // ---------------------------------------------------------------
    each_block: ($) =>
      seq(
        "EACH",
        field("var", $.identifier),
        "IN",
        field("range", $.range),
        $.block,
      ),

    // ---------------------------------------------------------------
    // Instances
    //   [read_state]: CopperBulb              one part
    //   [even_gate, odd_gate]: Comparator     several parts
    //   [lamp{0..7, 0..7}]: RedstoneLamp      an array, used as [lamp{3, 5}]
    // Reuses the bracket list from wiring; the checker allows only names
    // and ranged arrays here.
    // ---------------------------------------------------------------
    instance_declaration: ($) =>
      seq(
        field("instances", $.component_array),
        ":",
        field("type", $.identifier),
        optional(field("settings", $.setting_values)),
      ),

    // A colon followed by an indented body.
    block: ($) => seq(":", $._indent, repeat1($._block_statement), $._dedent),

    // ---------------------------------------------------------------
    // Flows (wiring)
    // ---------------------------------------------------------------
    flow: ($) =>
      prec.right(
        seq(
          $.flow_source,
          choice(
            seq(
              repeat1(
                seq(
                  choice("->", $.delay, $.vibration_link),
                  $.flow_destination,
                ),
              ),
              optional($._flow_end),
            ),
            $._flow_end,
          ),
        ),
      ),

    //   rear -(2gt)-> delayed     the value arrives that much later
    // Parentheses hold time; the arrow's parts must touch.
    // `-(` is one token, so after a flow the parser can tell a delay from the
    // next pattern arm (`-{`) by the very first token.
    delay: ($) =>
      seq("-(", field("time", $._duration), ")", token.immediate("->")),

    // ---------------------------------------------------------------
    // Operators on single pins, read as strengths 0..15:
    //   max{a, b, ...}   sub{a, b}   sum{a, b, ...}   mod{a, b}
    // Any name touching a brace parses here; the checker knows the real ones.
    // ---------------------------------------------------------------
    operator_call: ($) =>
      seq(
        field("name", $.identifier),
        token.immediate("{"),
        field("arg", $._operand),
        repeat(seq(",", field("arg", $._operand))),
        "}",
      ),

    // vib.freq  one field of a structured value. The dot must touch both sides
    _operand: ($) =>
      choice(
        $.operator_call,
        $.output_ref,
        $.component_array,
        $.field_access,
        $.identifier,
        $.number,
      ),

    // =>  yields the component's output     ~>  emits it into the air
    _flow_end: ($) => choice("=>", "~>", $.state_write),

    state_write: ($) => seq("=:", $.identifier),

    flow_source: ($) =>
      choice(
        $.operator_call,
        $.output_ref,
        $.component_array,
        $.data_array,
        $.indexed_identifier,
        $.parameter_ref,
        $.field_access,
        $.identifier,
        $.number,
      ),

    flow_destination: ($) =>
      choice(
        $.output_ref,
        $.component_array,
        $.data_array,
        $.indexed_identifier,
        $.parameter_ref,
        prec(-1, $.identifier),
      ),

    // Brackets: physical things and their pins.
    component_array: ($) =>
      seq(
        "[",
        choice(
          $.component_content,
          seq(
            $.flow_destination_item,
            repeat1(seq(",", $.flow_destination_item)),
          ),
        ),
        "]",
      ),

    // Braces: values. A bundle may pull from component outputs:
    //   {[Repeater_8], [Repeater_9]}   {[XNOR_1, XNOR_2]}
    data_array: ($) =>
      seq("{", $.data_item, repeat(seq(",", $.data_item)), "}"),

    data_item: ($) =>
      choice(
        $.named_item,
        $.operator_call,
        $.field_access,
        $.identifier,
        $.number,
        $.indexed_identifier,
        $.output_ref,
        $.component_array,
      ),

    component_content: ($) =>
      choice(
        $.stateful_component,
        $.indexed_component,
        $.instance_ref,
        $.identifier,
      ),

    // lamp{3, 5}   lamp{i - 1, j}   lamp{0..7, 3} (a group: every lamp in row 3)
    // Indices are values, so they go in braces.
    instance_ref: ($) =>
      seq(
        field("name", $.identifier),
        token.immediate("{"),
        $.index,
        repeat(seq(",", $.index)),
        "}",
      ),

    index: ($) =>
      choice(
        field("value", $.number),
        // A group of parts: lamp{0..7}. The range rule is shared, so `*` parses
        // here too; the checker rejects it, since an array needs a size.
        $.range,
        seq(
          field("var", $.identifier),
          optional(
            seq(
              field("op", alias(choice("+", "-"), $.index_op)),
              field("offset", $.number),
            ),
          ),
        ),
      ),

    flow_destination_item: ($) =>
      choice(
        $.instance_ref,
        $.identifier,
        $.indexed_component,
        $.parameter_ref,
        $.output_ref,
        $.indexed_identifier,
        $.timing_ref,
      ),

    parameter_ref: ($) =>
      choice(
        seq($._count, "[", $._ref_list, "]"),
        seq(
          field("port", alias($.identifier, $.port_name)),
          token.immediate("["),
          $._ref_list,
          "]",
        ),
      ),

    _ref_list: ($) => seq($._ref_item, repeat(seq(",", $._ref_item))),

    _count: ($) => choice($.number, "*"),

    pattern_match: ($) =>
      seq(field("subject", $.data_array), "?", repeat1($.pattern_case)),

    pattern_case: ($) =>
      prec.right(
        seq(
          "-",
          "{",
          $.pattern_value,
          repeat(seq(",", $.pattern_value)),
          "}",
          "->",
          choice(
            $.block,
            // When the pattern matches, this wire conducts, so an arm's result
            // can keep flowing like any flow:  -{01}-> {1, 1, 0, 0} -> low
            seq(
              $.pattern_result,
              repeat(seq(choice("->", $.delay), $.flow_destination)),
              optional(choice("=>", "~>", $.state_write)),
            ),
          ),
        ),
      ),

    pattern_value: ($) =>
      choice(
        $.identifier,
        $.number,
        alias("*", $.wildcard),
        $.tuple_literal,
        $.pattern_repeat,
        $.pattern_range,
        $.stack_notation,
        $.stack_range,
      ),

    // "This value, for all the rest": {0*} is all zeros, {**} is anything.
    // Only the last value of a pattern may repeat.
    pattern_repeat: ($) =>
      seq(
        field(
          "value",
          choice($.number, $.tuple_literal, alias("*", $.wildcard)),
        ),
        token.immediate("*"),
      ),

    tuple_literal: (_) => /\d{2,}/,

    type: ($) =>
      choice(
        seq($._type_name, repeat($._type_field), optional($.type_arguments)),
        seq("{", $.type, "}"),
        $.enum_type,
        $.record_type,
      ),

    type_arguments: ($) =>
      seq(token.immediate("{"), choice($.type, $.range), "}"),

    // {inactive, active, cooldown}: state that holds one of these names.
    // At least two names: {x} alone is a bundle of type x.
    identifier: (_) => /[a-zA-Z_&][a-zA-Z0-9_&]*/,
